--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,9 @@ Description: The Tendril package provide functionalities to compute the
 Encoding: UTF-8
 LazyData: true
 Depends:
-    R (>= 2.10),
-    ggplot2
+    R (>= 2.10)
 Imports:
+    ggplot2,
     dplyr,
     reshape2,
     magrittr,
