--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,9 @@ Title: Compute Tendril
 License: GPL-2
 Authors@R: c(
     person("Martin", "Karpefors", email = "martin.karpefors@astrazeneca.com", role = "aut"),
-    person("Stefano", "Borini", email = "stefano.borini@astrazeneca.com", role = c("ctb", "cre"))
+    person("Stefano", "Borini", email = "stefano.borini@astrazeneca.com", role = c("ctb", "cre")),
+    person("Mark", "Edmondson-Jones", email = "mark.edmondson-jones@astrazeneca.com", role = "ctb"),
+    Person("Hielke", "Bijlsma", email = "Hielke.Bijlsma@tessella.com", role = "ctb")
 )
 Version: 2.0.3
 Description: The Tendril package provide functionalities to compute the
