--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,9 @@
 Package: Tendril
 Type: Package
-Title: Compute Tendril
+Title: Compute and display Tendril plots
 License: GPL-2
+Author: Martin Karpefors <martin.karpefors@astrazeneca.com>
+Maintainer: Stefano Borini <stefano.borini@astrazeneca.com>
 Authors@R: c(
     person("Martin", "Karpefors", email = "martin.karpefors@astrazeneca.com", role = "aut"),
     person("Stefano", "Borini", email = "stefano.borini@astrazeneca.com", role = c("ctb", "cre")),
