--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Tendril
 Type: Package
-Title: Compute and display Tendril plots
+Title: Compute and Display Tendril Plots
 License: GPL-2
 Authors@R: c(
     person("Martin", "Karpefors", email = "martin.karpefors@astrazeneca.com", role = "aut"),
@@ -8,13 +8,16 @@ Authors@R: c(
     person("Mark", "Edmondson-Jones", email = "mark.edmondson-jones@astrazeneca.com", role = "ctb"),
     person("Hielke", "Bijlsma", email = "Hielke.Bijlsma@tessella.com", role = "ctb"))
 Version: 2.0.4
-Description: The Tendril package provide functionalities to compute the
-    coordinates to produce a tendril plot. In the tendril plot, each tendril
-    (branch) represents a type of events, and the direction of the tendril is
-    dictated by on which treatment arm the event is occurring. If an event is
-    occurring on the first of the two specified treatment arms, the tendril bends
-    in a clockwise direction. If an event is occurring on the second of the treatment arms, the
-    tendril bends in an anti-clockwise direction.
+Description: Compute the coordinates to produce a tendril plot. 
+    In the tendril plot, each tendril (branch) represents a type of events, 
+    and the direction of the tendril is dictated by on which treatment arm the 
+    event is occurring. If an event is occurring on the first of the two 
+    specified treatment arms, the tendril bends in a clockwise direction. 
+    If an event is occurring on the second of the treatment arms, the
+    tendril bends in an anti-clockwise direction. 
+    Ref: Karpefors, M and Weatherall, J., "The Tendril Plot - a novel visual summary 
+    of the incidence, significance and temporal aspects of adverse events in 
+    clinical trials" - JAMIA 2018; 25(8): 1069-1073 <doi:10.1093/jamia/ocy016>
 URL: https://github.com/Karpefors/Tendril
 BugReports: https://github.com/Karpefors/Tendril/issues
 Encoding: UTF-8
